--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el párrafo de inicio</p>
+        <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
+        <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
     </body>
 </html>
