Estructura inicial de la cabecera  Please enter the commit message for your changes. Lines starting

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
-        <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
-    </body>
+        <div id="container">
+         <div id="cabecera">
+            Cabecera
+         <div id="post">
+            <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
+            <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
+        </div>
+    </div>
+
+</body>
 </html>
