--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,6 @@
         </head>
     <body>
         <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
-        <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
+        <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña. La primera vez fue con un libro de astronomia</p>
     </body>
 </html>
