--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
          <div id="post">
             <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
             <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
+            <p>gatos tristes</p>
         </div>
     </div>
 
