--- a/blogpost.html
+++ b/blogpost.html
@@ -1,20 +1,15 @@
 <html>
     <head>
-        <title>El título del post</title>
+        <title>Bienvenido al blog</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
-<<<<<<< HEAD
-        <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
-        <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña. La primera vez fue con un libro de astronomia</p>
-    </body>
-=======
         <div id="container">
          <div id="cabecera">
             Cabecera
          <div id="post">
             <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
-            <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
+            <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña. La primera vez fue con un libro de astronomia</p>
             <p>gatos tristes</p>
         </div>
     </div>
