--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido al blog</title>
+        <title>El título del post 3.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
@@ -9,11 +9,10 @@
             Cabecera
          <div id="post">
             <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
-            <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña. La primera vez fue con un libro de astronomia</p>
+            <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
             <p>gatos tristes</p>
         </div>
     </div>
 
 </body>
->>>>>>> cabecera
 </html>
