--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El título del post 6.0</title>
+        <title>El titulo del post 6.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
@@ -8,8 +8,8 @@
          <div id="cabecera">
             Cabecera
          <div id="post">
-            <h1>Aqui vamos a hacer un blog post, me gustaría hablar de tecnología.</h1>
-            <p>Y este es el párrafo de inicio. La teconología me ha parecido fascinante desde muy pequeña</p>
+            <h1>Aqui vamos a hacer un blog post, me gustaria hablar de tecnologia.</h1>
+            <p>Y este es el parrafo de inicio. La teconologia me ha parecido fascinante desde muy pequeña</p>
             <p>gatos tristes</p>
         </div>
     </div>
