creditos al teamplatzi

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
             <h1>Aqui vamos a hacer un blog post, me gustaria hablar de tecnologia.</h1>
             <p>Y este es el parrafo de inicio. La teconologia me ha parecido fascinante desde muy pequeña</p>
             <p>gatos tristes</p>
+            <p> nueva prueba </p>
         </div>
     </div>
 
