--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
             <p>Y este es el parrafo de inicio. La teconologia me ha parecido fascinante desde muy pequeña</p>
             <p>gatos tristes</p>
             <p> nueva prueba </p>
+            <p> nueva prueba2 </p>
         </div>
     </div>
 
