incluye ejemplos nuevosc

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,7 @@
             <p>gatos tristes</p>
             <p> nueva prueba </p>
             <p> nueva prueba2 </p>
+            <p> nueva prueba3 </p>
         </div>
     </div>
 
